# linkuptime

./: .gitignore  Cargo.toml  README.md  flake.nix  linkuptime.py  requirements.txt  setup.py
src/: main.rs
