[package]
name = "linkuptime"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
diameter = { git = "https://github.com/xfnw/diameter", tag = "v0.3.0" }
gumdrop = "0.8.1"
irctokens = "0.1.3"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
